# gh-renovate-silencer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build-and-publish.yml  test.yml
gh_renovate_silencer/: __init__.py  cli.py  github_client.py  models.py
tests/: test_cli.py
